# Force-Focus

./: .env.example  .gitattributes  .gitignore  ML_models.md  README.md  docker-compose.yml  package-lock.json
backend/: Caddyfile  Dockerfile  docker-compose.yml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/endpoints/: health.py
backend/app/api/endpoints/desktop/: auth.py  data.py  events.py  feedback.py  models.py
backend/app/api/endpoints/user/: me.py
backend/app/core/: config.py  security.py
backend/app/crud/: events.py  feedback.py  schedules.py  sessions.py  tasks.py  users.py
backend/app/db/: mongo.py
backend/app/ml/: train.py
backend/app/models/: common.py  event.py  feedback.py  profile.py  rule.py  schedule.py  session.py  task.py  user.py
backend/app/schemas/: event.py  feedback.py  insight.py  profile.py  rule.py  schedule.py  session.py  task.py  token.py  user.py
backend/app/templates/: desktop_login_success.html
backend/app/utils/: dummy_data.py
backend/scripts/: generate_base_model.py  test_ml_train.py
desktop-agent/: .gitignore  README.md  overlay.html  package-lock.json  package.json  vite.config.ts  widget.html
desktop-agent/docs/01-architecture/: overview.md
desktop-agent/docs/02-backend/: ai.md  commands.md  core.md  managers.md  ml-personalization.md  utils.md
desktop-agent/docs/03-frontend/: frontend.md
desktop-agent/docs/04-config/: config.md
desktop-agent/docs/05-data-flow/: data-flow.md
desktop-agent/docs/06-api-reference/: tauri-commands.md
desktop-agent/docs/07-decision-log/: decisions.md
desktop-agent/docs/08-future-features/: 01-positive-intervention.md  02-intent-based-profiling.md  03-workspace-snapshot-restore.md
desktop-agent/docs/ml_models/: ml-pipeline.md
desktop-agent/docs/security/: 01-rpa-vulnerabilities-patch.md
desktop-agent/src/: App.tsx  main.tsx  overlay_main.tsx  widget_main.tsx
desktop-agent/src-tauri/: Cargo.toml  Dockerfile  tauri.conf.json
desktop-agent/src-tauri/capabilities/: default.json
desktop-agent/src-tauri/resources/models/: global_map.json  personal_model.onnx  scaler_params.json
desktop-agent/src-tauri/src/: app_core.rs  backend_communicator.rs  commands.rs  feature_extractor.rs  inference.rs  input_monitor.rs  lib.rs  logging.rs  model_update_manager.rs  schedule_monitor.rs  state_engine.rs  storage_manager.rs  sync_manager.rs  tray_manager.rs  widget_manager.rs  window_commands.rs
desktop-agent/src-tauri/src/ai/: feature.rs  inference.rs  mod.rs  model_update.rs
desktop-agent/src-tauri/src/commands/: auth.rs  input.rs  ml.rs  mod.rs  session.rs  system.rs  task.rs  vision.rs  window.rs
desktop-agent/src-tauri/src/core/: app.rs  input.rs  mod.rs  state.rs
desktop-agent/src-tauri/src/managers/: mod.rs  schedule.rs  storage.rs  sync.rs  tray.rs  widget.rs
desktop-agent/src-tauri/src/utils/: api.rs  backend_comm.rs  logging.rs  mod.rs
desktop-agent/src-tauri/tests/: integration_test.rs
desktop-agent/src/api/: index.ts
desktop-agent/src/components/: InterventionOverlay.tsx  LoginView.styles.ts  LoginView.tsx  MainView.styles.ts  MainView.tsx  SettingsView.styles.ts  SettingsView.tsx
desktop-agent/src/components/MainView/: FooterControls.tsx  HeaderControls.tsx  MainControls.tsx  index.tsx
desktop-agent/src/hooks/: useInterventionListener.ts
desktop-agent/src/mocks/: handlers.ts
desktop-agent/src/types/: index.ts
docs/: README Backend.md  web-dashboard.md
docs/desktop-agent/: README.md
docs/ml_models/: ml-pipeline.md
web-dashboard/: Dockerfile  README.md  index.html  package-lock.json  package.json
web-dashboard/src/: App.css  App.jsx  MainStore.jsx  main.jsx
web-dashboard/src/api/: authApi.js  axiosInstance.js  scheduleApi.js  sessionApi.js  taskApi.js
web-dashboard/src/components/login/: login.css  login.jsx
web-dashboard/src/hooks/: useTasks.js
(+43 files in other folders)
