[package]
name = "desktop-agent"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


# ---- 기능별 의존성 ---- https://crates.io/ (최신 버전 확인)
# 1. 시스템 정보 (CPU, 메모리, 프로세스 목록 등)
sysinfo = "0.37.2"

# 2. 키보드/마우스 이벤트 감지 및 제어 (유휴 시간 감지에 사용)
rdev = "0.5.3"

# 3. 스크린샷 캡처
screenshots = "0.8.10"

# 4. 활성 창 정보
active-win-pos-rs = "0.9.1" 
