[package]
name = "desktop-agent"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


# ---- 기능별 의존성 ---- https://crates.io/ (최신 버전 확인)
# 1. 시스템 정보 (CPU, 메모리, 프로세스 목록 등)
sysinfo = "0.37.2"

# 2. 키보드/마우스 이벤트 감지 및 제어 (유휴 시간 감지에 사용)
rdev = "0.5.3"

# 3. 스크린샷 캡처
screenshots = "0.8.10"

# 4. 활성 창 정보
active-win-pos-rs = "0.9.1" 

# 5. 시간 관련 유틸리티
chrono = "0.4.42"

# 6. higher level HTTP client library
reqwest = { version = "0.12", features = ["json"] }

# 7. notification
tauri-plugin-notification = "2"

# 8. SQLite
rusqlite = { version = "0.37.0", features = ["bundled"] }

# 9. (StorageManager 테스트용)
lazy_static = "1.5.0"

# 10. 비동기 연결
tokio = { version = "1.48.0", features = ["full"] }

# .env
dotenv = "0.15.0"
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"

[dependencies.uuid]
version = "1.18.1"
# Lets you generate random UUIDs
features = [
    "v4",
]

# 11. 시각 센서 구현을 위한 Windows API 바인딩
[dependencies.windows]
version = "0.58"  # 또는 최신 버전 (0.52+)
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging", # GetWindowRect, EnumWindows 등
    "Win32_Graphics_Gdi",           # CreateRectRgn, CombineRgn 등 (핵심)
    "Win32_System_Threading",       # OpenProcess, GetWindowThreadProcessId
    "Win32_System_ProcessStatus",   # K32QueryFullProcessImageNameW 등 (프로세스 경로)
]
# -------------------------------------------------------------

# 12. 시맨틱 태깅 위한 regex
[dependencies.regex]
version = "1.12.2"
default-features = false
# Unless you have a specific reason not to, it's good sense to enable standard
# library support. It enables several optimizations and avoids spin locks. It
# also shouldn't meaningfully impact compile times or binary size.
features = ["std"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

# [ML Inference]
# ort: ONNX Runtime의 Rust 바인딩. (삭제-'load-dynamic'은 시스템 라이브러리 의존성을 줄여줌.)
# ort 2.0부터는 download-binaries만 선언해도 자동으로 동적 링크(Dynamic Linking)가 활성화
ort = { version = "2.0.0-rc.11", features = ["download-binaries", "ndarray"] }
ndarray = "0.17.2" # 행렬 연산용
